<resources>
    <string name="app_name">Carpe Deum</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="header">Header</string>
    <string name="footerLike">Footer Like</string>
    <string name="footerShare">Footer Share</string>
    <string name="footerComment">Footer Comment</string>
    <string name="Zero">0</string>
    <string name="SAVE">Enregistrer</string>
    <string name="INFO_NO_RESULTS">Aucun résultat ne correspond à votre recherche.</string>
    <string name="REMOVE">Supprimer</string>
    <string name="DELETE">Effacer</string>
    <string name="CANCEL">Annuler</string>
    <string name="OK">Ok</string>
    <string name="PUBLISH">Publier</string>
    <string name="COMMENTS">Commentaires</string>
    <string name="REPORT_THIS">Signaler un contenu inapproprié</string>
    <string name="INFO_FAILED_CONNECTION">Connexion impossible au serveur. Veuillez vérifier que vous êtes connecté à internet.</string>
    <string name="ERREUR_IDENTIFICATION">Erreur d\'identification: Utilisateur ou mot de passe manquant.</string>
    <string name="LOADING">Chargement en cours…</string>
    <string name="LOADING_BACKGROUND">Chargement en cours…</string>
    <string name="SEARCH_NAME_PLACEHOLDER">Recherche par nom</string>
    <string name="Date">Date</string>
    <string name="ChargementEnCours">Chargement en cours</string>
    <string name="ParoleDHomme">UNE PAROLE D\'HOMME</string>
    <string name="ParoledHomme">Parole d\'Homme</string>
    <string name="ParoleDeDieu">LA PAROLE DE DIEU</string>
    <string name="LaParoledeDieu">La Parole de Dieu</string>
    <string name="membre">membre</string>
    <string name="membres">membres</string>
    <string name="visiteur">visiteur</string>
    <string name="visiteurs">visiteurs</string>
    <string name="et">et</string>
    <string name="enLigne">en ligne</string>
    <string name="Fetedujour">Fête du jour</string>
    <string name="Calendrier">Calendrier</string>
    <string name="CalendrierJour"><![CDATA[Lundi de la 20 semaine du temps ordinaire du temps très ordinaire]]></string>
    <string name="QuestionsDeFoi">Questions de Foi</string>
    <string name="Apropos">A propos de Carpe Deum…</string>
    <string name="ConditionsGenerales">Conditions générales &amp; confidentialité</string>
    <string name="Geomesse">Géomesse</string>
    <string name="LIST_LOADING">Chargement…</string>
    <string name="PLACE_BUTTON_EDIT">Corriger une erreur</string>
    <string name="Aujourdhui">Aujourd\'hui</string>
    <string name="MonProfil">Mon profil</string>
    <string name="Ensemble">Ensemble</string>
    <string name="PartagerVia">Partager via</string>
    <string name="HOME_OFFLINE">Les fonctionnalités et contenus en ligne de l\'application ne sont pas accessibles sans connexion internet.</string>
    <string name="HOME_LOGIN">Connexion</string>
    <string name="HOME_LOGOUT">Déconnexion</string>
    <string name="HOME_CONTACT_US">Contacter l\'équipe</string>
    <string name="LOGOUT_CONFIRM">Voulez-vous vous déconnecter ?</string>
    <string name="Oraison">Oraisons</string>
    <string name="Evangile">Evangile</string>
    <string name="Meditation">Méditation</string>
    <string name="MeditationCredits">MéditationCredits</string>
    <string name="Partager">Partager</string>
    <string name="Ajouteruncommentaire">Ajouter un commentaire</string>
    <string name="Ecouterlaversionaudio">Ecouter la version audio</string>
    <string name="surCarpeDeum">sur Carpe Deum</string>
    <string name="OraisonTitle">Prions avec l\'Eglise</string>
    <string name="OraisonHeader">Cette oraison est lue aujourd\'hui par tous les prêtres du monde au cours de la Messe. En la lisant maintenant, nous nous unissons au Pape et aux chétiens du monde entier.</string>
    <string name="OraisonCredits">Oraison Credits</string>
    <string name="OraisondujoursurCD">L\'oraison du jour sur Carpe Deum</string>
    <string name="CALENDAR_READING_SHARE_EMAIL_SUBJECT">La lecture du jour sur Carpe Deum</string>
    <string name="CALENDAR_PSALM_SHARE_EMAIL_SUBJECT">Le psaume du jour sur Carpe Deum</string>
    <string name="ParoleDHommeExemple">Le coeur n\'a pas de rides</string>
    <string name="PenseeDuJour">La pensée du jour sur Carpe Deum</string>
    <string name="DISPLAY_MORE_COMMENTS">Afficher les %1$d commentaires précédents</string>
    <string name="CALENDAR_TAB_COMMENTARY_EMPTY">"La méditation associée à l\'évangile du jour n'est pas renseignée. Elle le sera dans une mise à jour à venir."</string>
    <string name="CALENDAR_TAB_READING">Lecture</string>
    <string name="CALENDAR_TAB_PSALM">Psaume</string>
    <string name="ACCOUNT_CANDLES_0_REMAINING">Hey ! Il ne vous reste plus de cierges. Mais pas de panique, il y a encore du stock !</string>
    <string name="ACCOUNT_CANDLES_1_REMAINING">Hey ! Il ne vous reste qu\'un cierge. Mais pas de panique, il y a encore du stock !</string>
    <string name="ACCOUNT_CANDLES_d_REMAINING_FEW">Hey ! Il ne vous reste que %1$d cierges. Mais pas de panique, il y a encore du stock !</string>
    <string name="ACCOUNT_CANDLES_d_REMAINING_MANY">Il vous reste %d cierges.</string>
    <string name="CANDLES">Cierges</string>
    <string name="ACCOUNT_CANDLES_INFO">Un cierge allumé est le signe d’une prière qui dure, et en plus vous donnez à Carpe Deum une petite partie des ressources nécessaires à son développement.</string>
    <string name="ACCOUNT_CANDLES_PAYMENTS_DISABLED">Les paiements en ligne sont désactivés sur votre appareil. Vous devez vérifier vos réglages et contrôles parentaux si vous souhaitez soutenir Carpe Deum.</string>
    <string name="ACCOUNT_CANDLES_LOADING_FROM_APP_STORE">Chargement des infos de du Google Play…</string>
    <string name="ACCOUNT_CANDLES_NO_RESULTS_FROM_APP_STORE">Google Play n\'a retourné aucun résultat.</string>
    <string name="PRAYER_MESSAGE_CANDLE_OK">Allumer</string>
    <string name="PRAYER_MESSAGE_CANDLE_S">Il vous reste %1$d cierges virtuels. Voulez-vous en allumer un pour cette intention de prière ?</string>
    <string name="PRAYER_MESSAGE_CANDLE_0">Vous n\'avez plus de cierges virtuels disponibles. Vous pouvez acheter des cierges supplémentaires et soutenir l\'action de Carpe Deum.</string>
    <string name="Prev">Previous</string>
    <string name="Next">Next</string>
    <string name="Pub">Pub</string>
    <string name="UneParoledHomme">Une Parole d\'Homme</string>
    <string name="QuestionTitle">La Profession de Foi</string>
    <string name="CarnetDePrieres">Carnet de prières</string>
    <string name="ExemplePriere">Ceci est un exemple de priere</string>
    <string name="TextesMediter">Textes à méditer</string>
    <string name="Ordinaire">Ordinaire de la Messe</string>
    <string name="OrdinaireTitle">L\'Ordinaire de la Messe</string>
    <string name="leKiosque">Le Kiosque</string>
    <string name="DateExemple">Mardi 20 aout 2013</string>
    <string name="VideoTitle">Titre de la video</string>
    <string name="videoText">Ceci est un texte descriptif de la video</string>
    <string name="textCredits">Signature du texte</string>
    <string name="HOME_MORE_NEWS">Plus d\'articles…</string>
    <string name="LOGIN_OR_REGISTER_INTRO">
<![CDATA[Et oui ! Il vous manque encore l’essentiel de Carpe Deum ! Si donc vous voulez :<br/>
    - vivre avec nous la communion des saints,<br/>
    - partager des intentions de prière,<br/>
    - allumer des cierges qui font durer votre prière,<br/>
    - communiquer avec les autres,<br/>
    - annoncer, réagir, publier,…<br/><br/>
    <i>…Et vous pourrez aussi prendre un compte « Ange gardien » (accès dans « mon profil »)</i><br/><br/>
    <strong>Inscrivez-vous, c’est gratuit et immédiat !</strong> Et vos infos  ne seront diffusées sous aucun prétexte.<br/>]]>
    </string>
    <string name="LOGIN_EXISTING_ACCOUNT">Mais je suis déjà inscrit !</string>
    <string name="LOGIN_NEW_ACCOUNT">Je m\'inscris</string>
    <string name="LOGIN_INPUT_EMAIL">E-mail</string>
    <string name="LOGIN_INPUT_PASSWORD">Mot de passe</string>
    <string name="LOGIN_INPUT_EMAIL_PLACEHOLDER">Mon e-mail</string>
    <string name="LOGIN_INPUT_PASSWORD_PLACEHOLDER">Mon mot de passe</string>
    <string name="LOGIN_FORGOT_PASSWORD">J\'ai oublié mon mot de passe</string>
    <string name="SEND">Envoyer</string>
    <string name="HOME_PROFILE_MY_MESSAGES">Mes messages</string>
    <string name="HOME_PROFILE_MY_NEIGHBORS">Mes voisins</string>
    <string name="HOME_PROFILE_MY_CONTACTS">Mes contacts</string>
    <string name="HOME_MYLIST_PROFILE">Mon profil</string>
    <string name="HOME_NUM_MESSAGES"><![CDATA[Nouveaux<br/>messages]]></string>
    <string name="HOME_NUM_MESSAGE_01">message</string>
    <string name="HOME_NUM_MESSAGE_N">messages</string>
    <string name="HOME_NUM_CONTACTS"><![CDATA[Contacts<br/>connectés]]></string>
    <string name="HOME_NUM_CONTACT_01">contact</string>
    <string name="HOME_NUM_CONTACT_N">contacts</string>
    <string name="HOME_NUM_NEIGHBORS"><![CDATA[Connectés<br/>autour de moi]]></string>
    <string name="HOME_NUM_NEIGHBOR_01">voisin</string>
    <string name="HOME_NUM_NEIGHBOR_N">voisins</string>
    <string name="HOME_PUBLISH_UPDATE">Publier une humeur</string>
    <string name="HOME_MYLIST_PRAYERS">Mes intentions de prière</string>
    <string name="HOME_MYLIST_CLASSIFIEDS">"Mes annonces"</string>
    <string name="HOME_TITLE_PLACES">Lieux à proximité</string>
    <string name="HOME_SWITCH_APPEARS_ONLINE">En ligne</string>
    <string name="HOME_SWITCH_APPEARS_OFFLINE">Invisible</string>
    <string name="HOME_SWITCH_GPS_IS_ON">GPS actif</string>
    <string name="HOME_SWITCH_GPS_IS_OFF">GPS désactivé</string>
    <string name="HOME_SWITCH_PUSH_IS_ON">Push actif</string>
    <string name="HOME_SWITCH_PUSH_IS_OFF">Push désactivé</string>
    <string name="HOME_TITLE_SETTINGS">Mes options</string>
    <string name="HOME_SHORTCUT_MANUAL_LOCATION">Localisation manuelle</string>
    <string name="HOME_SHORTCUT_FIND_FRIENDS">Inviter ou retrouver mes amis</string>
    <string name="HOME_SHORTCUT_DISPLAY_CONVERSATIONS">Afficher mes conversations</string>
    <string name="HOME_SHORTCUT_CHANGE_EMAIL">Changer mon e-mail</string>
    <string name="HOME_SHORTCUT_CHANGE_PASSWORD">Changer mon mot de passe</string>
    <string name="HOME_SHORTCUT_DELETE_PROFILE">Supprimer mon profil</string>
    <string name="HOME_SHORTCUT_ACCOUNT_PREMIUM">Mon compte Ange Gardien</string>
    <string name="HOME_SHORTCUT_ACCOUNT_CANDLES">Mes cierges virtuels</string>
    <string name="PROFILE_BUTTON_MESSAGE">Envoyer un message</string>
    <string name="PROFILE_BUTTON_FRIEND">Ajouter à mes contacts</string>
    <string name="ACCOUNT_CLOSE_INFO">Vous pouvez fermer votre compte sur Carpe Deum à tout moment. Toutes vos données et tous vos messages seront perdus ; il n\'y a pas d\'annulation possible. Si vous êtes sûr de vouloir supprimer votre compte, saisissez votre mot de passe ci-dessous.</string>
    <string name="ACCOUNT_CLOSE_INPUT_PASSWORD">Mot de passe</string>
    <string name="ACCOUNT_CLOSE_INPUT_PASSWORD_PLACEHOLDER">Votre mot de passe</string>
    <string name="HOME_CREATE_CLASSIFIED">Créer une annonce</string>
    <string name="CLASSIFIED_EDIT_PHOTO">Photo</string>
    <string name="UPDATE_POSTED_CLASSIFIED_TIP">Bon plan</string>
    <string name="UPDATE_POSTED_CLASSIFIED_NOTICE">Faire-part</string>
    <string name="UPDATE_POSTED_CLASSIFIED_EVENT">Evénement</string>
    <string name="UPDATE_POSTED_CLASSIFIED_JOBS">Emploi</string>
    <string name="UPDATE_POSTED_CLASSIFIED_FORSALE">Achat-vente</string>
    <string name="UPDATE_POSTED_CLASSIFIED_HOUSING">Logement</string>
    <string name="UPDATE_POSTED_CLASSIFIED_MISC">Divers</string>
    <string name="STATUS_INFO">Votre humeur sera publiée sur votre profil et sur le Parvis. Un historique de vos dernières humeurs et autres activités est également visible sur votre profil.</string>
</resources>