<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/main_margin"
        >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HOME_TITLE_SETTINGS"
            android:gravity="center"
            android:textColor="@color/profileGreyText"
            android:textAllCaps="true"
            android:textSize="@dimen/standardText"
            />

    <Button
            android:id="@+id/button_manual_location_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_MANUAL_LOCATION"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />

    <Button
        android:id="@+id/button_invite_friends_com_profile_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcornerquestions_home"
        android:padding="7dip"
        android:text="@string/HOME_SHORTCUT_FIND_FRIENDS"
        android:gravity="left|center_vertical"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="1dip"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText" />
    <Button
            android:id="@+id/button_display_conversation_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_DISPLAY_CONVERSATIONS"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />
    <Button
            android:id="@+id/button_premium_account_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_ACCOUNT_PREMIUM"
            android:gravity="left|center_vertical"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginBottom="1dip"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />
    <Button
            android:id="@+id/button_account_candles_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_ACCOUNT_CANDLES"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />
    <Button
            android:id="@+id/button_change_email_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_CHANGE_EMAIL"
            android:gravity="left|center_vertical"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginBottom="1dip"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />
    <Button
            android:id="@+id/button_change_password_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_CHANGE_PASSWORD"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />
    <Button
            android:id="@+id/button_delete_profile_com_profile_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="7dip"
            android:text="@string/HOME_SHORTCUT_DELETE_PROFILE"
            android:gravity="left|center_vertical"
            android:layout_marginTop="@dimen/main_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            />


</LinearLayout>