<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HOME_CREATE_CLASSIFIED"
        android:textAllCaps="true"
        android:textSize="@dimen/textUnderButtons"
        android:gravity="center"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_tip_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:background="@drawable/roundedcornerup_home"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_TIP"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_notice_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_NOTICE"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_event_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_EVENT"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_misc_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_MISC"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_forsale_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_FORSALE"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_jobs_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_JOBS"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
    <Button
        android:id="@+id/button_housing_com_classified_create_classified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="1dip"
        android:background="@drawable/roundedcornerdown_home"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:text="@string/UPDATE_POSTED_CLASSIFIED_HOUSING"
        android:gravity="left|center_vertical"
        android:padding="@dimen/little_margin"
        />
</LinearLayout>