<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <EditText
        android:id="@+id/editText_status_com_status_create_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/STATUS_INFO"
        android:textColorHint="@color/grisCopyright"
        android:padding="@dimen/main_margin"
        android:gravity="top|left"
        android:ems="10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageButton
            android:id="@+id/imageButton_photo_com_status_create_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_camera"
            android:contentDescription="@string/CLASSIFIED_EDIT_PHOTO"
            android:layout_gravity="left|center_vertical" />

        <Button
            android:id="@+id/button_publish_com_status_create_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PUBLISH"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</LinearLayout>