<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background1"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:text="@string/LOGIN_INPUT_EMAIL"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standardText"
                    />
            <EditText
                    android:id="@+id/editText_email_com_login"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:inputType="textEmailAddress"
                    android:hint="@string/LOGIN_INPUT_EMAIL_PLACEHOLDER"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standardText"
                    android:ellipsize="end"
                    />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <TextView
                android:text="@string/LOGIN_INPUT_PASSWORD"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:textColor="@color/black"
                android:textSize="@dimen/standardText" />
            <EditText
                android:id="@+id/editText_password_com_login"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:inputType="textPassword"
                android:hint="@string/LOGIN_INPUT_PASSWORD_PLACEHOLDER"
                android:textColor="@color/black"
                android:textSize="@dimen/standardText"
                android:imeOptions="actionSend"
                android:ellipsize="end" />
        </LinearLayout>
    </LinearLayout>
    <Button
            android:id="@+id/button_lostpasswd_com_login"
            android:text="@string/LOGIN_FORGOT_PASSWORD"
            android:textColor="@color/black"
            android:textSize="@dimen/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:background="@drawable/roundedcornerquestions_home"
            android:padding="5dip"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button_send_com_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SEND"
        android:textColor="@color/black"
        android:textSize="@dimen/standardText"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:layout_margin="@dimen/little_margin"
        android:background="@drawable/roundedcornerquestions_home"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>