<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_height="50dip"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        >
    <ImageButton
            android:id="@+id/button_aujourdhui_ComCarpeDeumHomeButtons"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:text="@string/Aujourdhui"
            android:layout_weight="30"
            android:src="@drawable/tabicon_aujourdhui"
            android:background="@color/black"
            android:contentDescription="@string/Aujourdhui"
            />
    <ImageButton
            android:id="@+id/button_monprofil_ComCarpeDeumHomeButtons"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:text="@string/MonProfil"
            android:layout_weight="30"
            android:src="@drawable/tabicon_monprofil"
            android:background="@color/black"
            android:contentDescription="@string/MonProfil"
            />
    <ImageButton
            android:id="@+id/button_ensemble_ComCarpeDeumHomeButtons"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:text="@string/Ensemble"
            android:layout_weight="30"
            android:src="@drawable/tabicon_ensemble"
            android:background="@color/black"
            android:contentDescription="@string/Ensemble"
            />
</LinearLayout>